--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 blib/
-.build/
-_build/
+/.build
+/_build*
 cover_db/
 inc/
 Build
@@ -11,7 +11,9 @@ Makefile
 Makefile.old
 MANIFEST.bak
 META.yml
-MYMETA.yml
+MYMETA.*
 nytprof.out
 pm_to_blib
 Mojolicious-Plugin-Disqus*
+!META.json
+/.prove
